Partial fix for sidebar on mobile and rm comment transition

--- a/app/assets/stylesheets/partials/status-panel.css.scss
+++ b/app/assets/stylesheets/partials/status-panel.css.scss
@@ -256,7 +256,6 @@
       border-radius: 3px;
       padding: 10px;
       resize: none;
-      transition: height 0.2s ease 0s;
     }
   }
 
